[package]
name = "skia_gl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.31.1"
glutin-winit = { version = "0.4" }
winit = { version = "0.29.3" }
raw-window-handle = { version = "0.5.0" }
skia-safe = { version = "0.57.0", features = ["gl", "textlayout"] }
gl = "0.14.0"

[features]
default = ["independent_ui"]
independent_ui = []